argocd/ingress-without-issuer.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "istio"
  name: argocd-ingress
spec:
  tls:
  - hosts:
    - argocd.raspberrypi
    secretName: argocd-certificate-key-pair
  rules:
  - host: argocd.raspberrypi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
